--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,14 @@ h3 {
     color: #404bbf;
 }
 .narrative {
+    background-image: linear-gradient(
+	                  to bottom, 
+                      rgba(46, 47, 66, 0.7), 
+                      rgba(46, 47, 66, 0.7)), 
+                      url(../images/background-photo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;                 
     background-color: #2E2F42;
     padding: 188px 0 188px;
 }
