--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,10 @@ h3 {
 .header-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #E7E9FC;
 }
 .nav-menu {
     display: flex;
     align-items: center;
-    gap: 76px;
     font-size: 16px;
     color: #2E2F42;
     font-weight: 500;
@@ -104,6 +101,7 @@ h3 {
     letter-spacing: 0.32px;
     padding-bottom: 24px;
     padding-top: 24px;
+    margin-left: auto;
 }
 .header-contacts ul {
     display: flex;
@@ -219,6 +217,11 @@ h3 {
 .team .subtitle {
     margin-bottom: 8px;
 }
+.team-item-icon {
+    box-shadow: none;
+    width: 40px;
+    height: 40px;
+}
 .portfolio {
     padding: 120px 0 120px 0;
 }
@@ -268,5 +271,4 @@ footer {
 .footer-text {
     color: #F4F4FD;
     max-width: 264px;
-    margin-top: 17px;
 }
