--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ h3 {
 }
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 
+                0px 1px 1px 0px rgba(46, 47, 66, 0.16), 
+                0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -94,6 +97,18 @@ h3 {
 .header-link {
     padding-top: 24px;
     padding-bottom: 24px;
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 .header-contacts { 
     font-style: normal;
@@ -114,6 +129,10 @@ h3 {
 .adress-link:focus {
     color: #404bbf;
 }
+.adress-mail,
+.adress-tel {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
 .narrative {
     background-image: linear-gradient(
 	                  to bottom, 
@@ -122,9 +141,12 @@ h3 {
                       url(../images/background-photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;                 
+    background-size: cover;                
     background-color: #2E2F42;
     padding: 188px 0 188px;
+}
+.narrative-container {
+    max-width: 1440px;
 }
 .narrative-title {
     max-width: 496px;
@@ -156,6 +178,7 @@ h3 {
     line-height: 150%;
     letter-spacing: 0.04em;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .narrative .btn:hover,
 .narrative .btn:focus {
@@ -186,6 +209,15 @@ h3 {
 .function-item .subtitle {
     margin-bottom: 8px;
 }
+.function-box-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
 .team {
     background-color: #F4F4FD;
     padding: 120px 0 120px;
@@ -201,7 +233,7 @@ h3 {
 .team-item {
     width: calc((100% - 72px) / 4);
 }
-.team li {
+.team-item {
     background: #FFF;
     border-radius: 0px 0px 4px 4px;
     background: #FFF;
@@ -214,13 +246,33 @@ h3 {
 .team .section-text {
     text-align: center;
 }
-.team .subtitle {
+.team .subtitle,
+.section-text {
     margin-bottom: 8px;
 }
+.team-list-icon {
+    justify-content: center;
+}
 .team-item-icon {
-    box-shadow: none;
     width: 40px;
     height: 40px;
+}
+.team-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-link:hover,
+.team-link:focus {
+    background-color: #404bbf;
+}
+.team-icon {
+    fill: #f4f4fd;
 }
 .portfolio {
     padding: 120px 0 120px 0;
@@ -236,9 +288,15 @@ h3 {
 }
 .portfolio-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio li {
     background: #FFF;
+}
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+                0px 1px 1px rgba(46, 47, 66, 0.16), 
+                0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-information {
     padding: 32px 16px;
@@ -248,10 +306,37 @@ h3 {
 .portfolio .subtitle {
     margin-bottom: 8px;
 }
-
+.portfolio-item .section-text:hover {
+    transform: translateY(0%);
+}
+.portfolio-photo {
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 footer {
     background: #2E2F42;
     padding: 100px 0 100px;
+}
+.footer-container {
+    display: flex;
+    align-items: baseline;
+}
+.footer-one {
+    margin-right: 120px
 }
 .footer-logo {
     display: inline-block;
@@ -271,4 +356,37 @@ footer {
 .footer-text {
     color: #F4F4FD;
     max-width: 264px;
+}
+.footer-social-text {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 1.5;
+     letter-spacing: 0.02em;
+     color: #FFFFFF;
+     margin-bottom: 16px;
+}
+.footer-social-list {
+    display: flex;
+    gap: 16px
+}
+.footer-social-item {
+    width: 40px;
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+    background-color: #31d0aa;
+}
+.footer-icon {
+    fill: #f4f4fd;
 }
