--- a/css/styles.css
+++ b/css/styles.css
@@ -129,8 +129,7 @@ h3 {
 .adress-link:focus {
     color: #404bbf;
 }
-.adress-mail,
-.adress-tel {
+.adress-link {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 .narrative {
@@ -141,12 +140,10 @@ h3 {
                       url(../images/background-photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;                
+    background-size: cover; 
+    max-width: 1440px;               
     background-color: #2E2F42;
     padding: 188px 0 188px;
-}
-.narrative-container {
-    max-width: 1440px;
 }
 .narrative-title {
     max-width: 496px;
@@ -297,6 +294,7 @@ h3 {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
                 0px 1px 1px rgba(46, 47, 66, 0.16), 
                 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 .portfolio-information {
     padding: 32px 16px;
@@ -305,9 +303,6 @@ h3 {
 }
 .portfolio .subtitle {
     margin-bottom: 8px;
-}
-.portfolio-item .section-text:hover {
-    transform: translateY(0%);
 }
 .portfolio-photo {
     position: relative;
@@ -372,7 +367,7 @@ footer {
 .footer-social-item {
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .footer-social-link {
     width: 100%;
@@ -382,6 +377,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-link:hover,
 .footer-social-link:focus {
