--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,6 @@ h3 {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
                 0px 1px 1px rgba(46, 47, 66, 0.16), 
                 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
 }
 .portfolio-information {
     padding: 32px 16px;
@@ -321,6 +320,9 @@ h3 {
     width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-photo:hover .portfolio-text {
+    transform: translateY(0%);
 }
 footer {
     background: #2E2F42;
