--- a/css/styles.css
+++ b/css/styles.css
@@ -97,15 +97,19 @@ h3 {
 .header-link {
     padding-top: 24px;
     padding-bottom: 24px;
-    position: relative;
-    color: #404bbf;
+    color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-link::after {
+.current {
+    position: relative;
+    color: #404bbf;
+}
+.current::after {
     content: '';
     position: absolute;
     left: 0;
     bottom: -1px;
+    width: 100%;
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
@@ -144,6 +148,7 @@ h3 {
     max-width: 1440px;               
     background-color: #2E2F42;
     padding: 188px 0 188px;
+    margin: 0 auto;
 }
 .narrative-title {
     max-width: 496px;
@@ -321,7 +326,7 @@ h3 {
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-photo:hover .portfolio-text {
+.portfolio-item:hover .portfolio-text {
     transform: translateY(0%);
 }
 footer {
